# ft_push_swap

./: CMakeLists.txt  Makefile  README.md
src/: push_swap.h
src/ft_algorithm/: assign_weights.c  bool_utils.c  ft_algorithm.h  move.c  push_swap.c  three_sort.c  utilits.c
src/ft_stack/: array_to_stack.c  one_stack_operations.c  print_stack.c  stack.h  stack_operations_times.c  stack_utils.c  two_stacks_operations.c
src/libft/: chars_to_ints.c  ft_atoi.c  ft_itoa.c  ft_strdup.c  libft.h
srcs/: error_checks.c  error_main.c  free_memory.c  main.c  push_swap.h
srcs/alg/: algorithm.h  bool_utils.c  bool_utils.h  get_index.c  min_max_value.c  move_a_to_b.c  move_b_to_a.c  score.c  small_sort.c  sort.c
srcs/algorithm/: algorithm.h  bool_utils1.c  bool_utils2.c  get_index.c  min_max_value.c  move_a_to_b.c  move_b_to_a.c  moves.c  score.c  small_sort.c  sort.c  utilits1.c  utilits2.c
srcs/libft/: ft_atoi.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstnew.c  ft_lstsize.c  ft_split.c  ft_strcmp.c  ft_strlen.c  libft.h
srcs/stack/: one_stack_operations.c  stack.h  stack_oper_adds.c  stack_operations_a.c  stack_operations_b.c  stack_suboperations.c  two_stacks_operations.c
srcs/utils/: array_to_stack.c  error_checks.c  error_main.c  free_memory.c  main.c  push_swap.h
